Fixed styling for the section, added styling for mobile, but not tblet, also fixed the footer overflow

--- a/src/components/atoms/fixture-card/fixture-card.module.css
+++ b/src/components/atoms/fixture-card/fixture-card.module.css
@@ -25,6 +25,24 @@
   cursor: default;
 }
 
+.exit {
+  position: absolute;
+  top: 5%;
+  left: 88%;
+  color: white;
+  background-color: transparent;
+  border: none;
+  border-radius: 15%;
+  font-size: 30px;
+  font-weight: 800;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.exit:hover {
+  color: gray;
+  cursor: pointer;
+}
+
 @media (min-width: 1024px) {
   .container {
     gap: 1.5rem;
