--- a/src/components/molecules/fixture-hud/fixture-hud.module.css
+++ b/src/components/molecules/fixture-hud/fixture-hud.module.css
@@ -1,5 +1,6 @@
 .false {
-  display: none;
+  opacity: 0;
+  transition: opacity 1s;
 }
 
 .true {
@@ -15,6 +16,7 @@
   flex-direction: column-reverse;
   z-index: 1;
   opacity: 0.9;
+  transition: opacity 2s;
 }
 
 .active {
@@ -28,24 +30,6 @@
   width: 100%;
   height: 100%;
   padding: 1.5rem;
-}
-
-.exit {
-  position: absolute;
-  top: 5%;
-  left: 88%;
-  color: white;
-  background-color: transparent;
-  border: none;
-  border-radius: 15%;
-  font-size: 30px;
-  font-weight: 800;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.exit:hover {
-  color: gray;
-  cursor: pointer;
 }
 
 @media (min-width: 1024px) {
