--- a/src/components/molecules/footer/footer.module.css
+++ b/src/components/molecules/footer/footer.module.css
@@ -16,11 +16,10 @@
   display: inline-block;
   columns: 2;
   padding: 0;
-  flex-direction: column;
-  justify-content: center;
   list-style: none;
   font-weight: 600;
   font-size: 18px;
+  width: 100%;
 }
 
 .links > li {
@@ -48,6 +47,7 @@
 @media (min-width: 1024px) { 
   .links {
     display: flex;
+    width: auto;
     flex-direction: row;
     columns: 1;
   }
