--- a/src/components/molecules/game-fixtures-section/game-fixtures-section.module.css
+++ b/src/components/molecules/game-fixtures-section/game-fixtures-section.module.css
@@ -54,13 +54,11 @@
 }
 
 .hidden {
-  opacity: 0;
-  transition: opacity 0.4s ease;
+  display: none;
 }
 
 .reveal {
-  opacity: 1;
-  transition: opacity 0.4s ease;
+  display: none;
 }
 
 @media (min-width: 1024px) {
@@ -73,6 +71,16 @@
   }
   .years {
     font-size: 10vw;
+  }
+
+  .hidden {
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
+
+  .reveal {
+    opacity: 1;
+    transition: opacity 0.4s ease;
   }
 }
 
